--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -415,8 +415,11 @@
     <ClInclude Include="..\public\DecalCrash.h">
       <Filter>05.Effect\PlayerEffect\DecalCrash</Filter>
     </ClInclude>
+    <ClInclude Include="..\Public\EffectUrsaDust.h">
+      <Filter>05.Effect\Ursa\Dust</Filter>
+    </ClInclude>
     <ClInclude Include="..\Public\EffectSoilDust.h">
-      <Filter>05.Effect\Ursa</Filter>
+      <Filter>05.Effect\Ursa\Dust</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -820,7 +823,10 @@
       <Filter>05.Effect\PlayerEffect\DecalCrash</Filter>
     </ClCompile>
     <ClCompile Include="..\Private\EffectSoilDust.cpp">
-      <Filter>05.Effect\Ursa</Filter>
+      <Filter>05.Effect\Ursa\Dust</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\EffectUrsaDust.cpp">
+      <Filter>05.Effect\Ursa\Dust</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1245,6 +1251,9 @@
     </Filter>
     <Filter Include="05.Effect\Ursa">
       <UniqueIdentifier>{75c92038-93ed-43f2-9757-6d90198644b6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\Ursa\Dust">
+      <UniqueIdentifier>{e0a1b44a-3649-4c35-8b58-d494aa575171}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
