--- a/Assets/Scenes/UrsaDungeonSY.yaml
+++ b/Assets/Scenes/UrsaDungeonSY.yaml
@@ -1000,7 +1000,7 @@ GameObjects:
     NumOBB: 0
     Com_Transform:
       Translation: [-7.71003485, 3.02958258e-09, -0.893863142]
-      Rotation: [-1.11216987e-05, 82.4875717, -1.12273501e-05]
+      Rotation: [-1.11216959e-05, 82.4875717, -1.12273501e-05]
       Scale: [1.5, 1.29999995, 0.99999851]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon\Door\
@@ -1008,7 +1008,7 @@ GameObjects:
       HasCollider: false
       Equipment: false
     Translation: [-7.71003485, 3.02958258e-09, -0.893863142]
-    Rotation: [-1.11216987e-05, 82.4875717, -1.12273501e-05]
+    Rotation: [-1.11216959e-05, 82.4875717, -1.12273501e-05]
     Scale: [1.5, 1.29999995, 0.99999851]
     MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon\Door\
     MeshFileName: Door3.fbx
@@ -1626,6 +1626,54 @@ GameObjects:
       Specular: [1, 1, 1, 1]
     RenderGroup: 1
     FrustumRange: 1
+  - Name: E_InsDust
+    UUID: 15606537711191113771
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 0
+    BillBord: false
+    Com_Transform:
+      Translation: [0, 0, 0]
+      Rotation: [90, -0, 0]
+      Scale: [0.997606575, 0.999550641, 0.999483049]
+    Com_RectInstance:
+      Shape: 0
+      InstNum: 27
+      Color: [0.440579116, 0.440579116, 0.440579116, 0]
+      Speed: 5.4000001
+      LifeTime: 1.5
+      Size: 0.5
+      StartRadian: 0
+      RadiationAngle: 30
+      LerpColor: true
+      SrcColor: [0.521739125, 0.521739125, 0.521739125, 0]
+      DestColor: [0, 0, 0, 0]
+    Effect_Setting:
+      TextureDiffusePath: ""
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_blizzardDecal_01_TEX_KJS.png
+      TextureNoisePath: ""
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      OffsetColor: [0, 0, 0, 0]
   - Name: Wall0
     UUID: 7957372564531258125
     Active: true
