--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -211,6 +211,7 @@
     <ClInclude Include="..\Public\EffectRockDust.h" />
     <ClInclude Include="..\Public\EffectSmoke.h" />
     <ClInclude Include="..\Public\EffectSoilDust.h" />
+    <ClInclude Include="..\Public\EffectUrsaDust.h" />
     <ClInclude Include="..\Public\Element_Bomb.h" />
     <ClInclude Include="..\Public\Bomb_Center.h" />
     <ClInclude Include="..\Public\Fire_explosion.h" />
@@ -385,6 +386,7 @@
     <ClCompile Include="..\Private\EffectSwordRing.cpp" />
     <ClCompile Include="..\Private\EffectMeteoTrail.cpp" />
     <ClCompile Include="..\Private\EffectSoilDust.cpp" />
+    <ClCompile Include="..\Private\EffectUrsaDust.cpp" />
     <ClCompile Include="..\Private\Element_Bomb.cpp" />
     <ClCompile Include="..\private\ElfNPC.cpp" />
     <ClCompile Include="..\private\El_Flogas.cpp" />
