--- a/Assets/Scenes/TestRoomLee.yaml
+++ b/Assets/Scenes/TestRoomLee.yaml
@@ -178,13 +178,13 @@ GameObjects:
       Distortion3: [0.100000001, 0.100000001]
       DistortionScale: 0.800000012
       DistortionBias: 0.5
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
+      FadeOut: true
+      FadeOutDuration: 10
+      FadeOutStratTime: 10
+      FadeIn: true
+      FadeInDuration: 10
       FadeInStratTime: 0
-      EffectDuration: 0
+      EffectDuration: 20
       SpriteNumX: 0
       SpriteNumY: 0
       SpriteTotal: 0
