--- a/Assets/Scenes/Dungeon1_JunT.yaml
+++ b/Assets/Scenes/Dungeon1_JunT.yaml
@@ -44,7 +44,7 @@ GameObjects:
     UUID: 1361245669408703193
     Active: true
     Layer: Default
-    Instancing: false
+    Instancing: true
     Type: Object
     PassIndex: 0
     NumOBB: 0
@@ -57,5 +57,49 @@ GameObjects:
       MeshFileName: sagak.fbx
       HasCollider: true
       Equipment: false
+    Translation: [0.129999995, -1.02199996, -4.74100018]
+    Rotation: [0, 1.99999964, 0]
+    Scale: [1.63300002, 1.26800013, 0.837000072]
+    MeshFilePath: ..\..\Assets\Meshes\Map\
+    MeshFileName: sagak.fbx
+    HasCollider: true
     RenderGroup: 1
     FrustumRange: 50
+  - Name: Empty Object
+    UUID: 7197030116508455854
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 0
+    BillBord: false
+    Com_Transform:
+      Translation: [0, 0, -3.55413508]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_Decal:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ""
+      TextureMaskPath: ""
+      TextureNoisePath: ""
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      OffsetColor: [0, 0, 0, 0]
